@@ -37,7 +37,9 @@ use ANSTE::Util;
 use Cwd;
 use Text::Template;
 use Safe;
+use File::Basename;
 use File::Slurp;
+use File::Temp qw(tempdir);
 use TryCatch::Lite;
 
 my $SUITE_FILE = 'suite.html';
@@ -454,6 +456,70 @@ sub _runTest
         # Store end time
         my $endTime = $self->_time();
         $testResult->setEndTime($endTime);
+    } elsif ($type eq 'sikuli') {
+        if (not -d $path) {
+            throw ANSTE::Exceptions::NotFound('Test dir', $path);
+        }
+
+        my $tmpDir = tempdir();
+        my $dir = dirname($path);
+        my $basename = basename($path);
+        my $zipFile = "$tmpDir/$name.zip";
+        unless(system("cd $dir && zip -qr $zipFile $basename") == 0) {
+            ANSTE::Exceptions::Error("Could not generate zip file '$zipFile'");
+        }
+        $self->_uploadFileToHost($hostname, $zipFile);
+        system("rm -r $tmpDir");
+
+        $logfile = "$logPath/$suiteDir/$name.txt";
+        my $scriptfile = "$logPath/$suiteDir/script/$name.txt";
+
+        my $execScript = "$newPath/$name.cmd";
+        my @scriptContent = ();
+        # TODO: Unhardcode
+        push(@scriptContent, "cd ../anste-bin/\n");
+        push(@scriptContent, "\"C:\\Program Files\\7-Zip\\7z.exe\" x $name.zip\n");
+        push(@scriptContent, "set current=\%cd\%\n");
+        push(@scriptContent, "START cmd.exe /k \"c: & cd c:\\sikuli & runIDE.cmd -r \%current\%\\$basename\"");
+        write_file($execScript, @scriptContent);
+
+        # Copy the script to the results adding env and params
+        my $SCRIPT;
+        open ($SCRIPT, '>', $scriptfile);
+        binmode ($SCRIPT, ':utf8');
+
+        my $scriptContent = read_file($execScript);
+        print $SCRIPT "# Test script executed:\n";
+        print $SCRIPT $scriptContent;
+        close ($SCRIPT);
+
+        my $initialTime = time();
+        $ret = $self->_runScriptOnHost($hostname, $execScript, $logfile);
+
+        # Store end time
+        my $endTime = $self->_time();
+        $testResult->setEndTime($endTime);
+        $testResult->setDuration(time() - $initialTime);
+
+        if ($config->verbose()) {
+            if (($assertFailed and ($ret == 0)) or
+                (not $assertFailed) and ($ret != 0)) {
+                system ("cat $logfile");
+            }
+        }
+
+        # Editing the log to write the starting and ending times.
+        my $contents = read_file($logfile);
+        my $LOG;
+        open($LOG, '>', $logfile);
+        my $startTime = $testResult->startTime();
+        print $LOG "Starting test '$name' at $startTime.\n\n";
+        print $LOG $contents;
+        print $LOG "\nTest finished at $endTime.\n";
+        close($LOG);
+
+        $testResult->setLog("$logfile");
+        $testResult->setScript("$suiteDir/script/$name.txt");
     } else {
         if (not -r $path) {
             $path = $config->scriptFile($testScript);
@@ -467,9 +533,10 @@ sub _runTest
         my $scriptfile = "$logPath/$suiteDir/script/$name.txt";
 
         # Copy to temp directory dereferencing links and rename to test name
-        system("cp $path $newPath/$name");
+        my $execScript = "$newPath/$name";
+        system("cp $path $execScript");
         system("cp -r lib/* $newPath/") if (-d 'lib');
-        system("chmod +x $newPath/$name");
+        system("chmod +x $execScript");
 
         my $env = $test->env();
         my $params = $test->params();
@@ -496,7 +563,7 @@ sub _runTest
         my $initialTime = time();
 
         if ($type eq 'host') {
-            $ret = $self->{system}->runTest("$newPath/$name",
+            $ret = $self->{system}->runTest($execScript,
                                              $logfile, $env, $params);
         } elsif ($type eq 'web') {
             my $videofile;
@@ -506,7 +573,7 @@ sub _runTest
                 $system->startVideoRecording($videofile);
             }
 
-            $ret = $self->_runWebTest($test, "$newPath/$name", $logfile);
+            $ret = $self->_runWebTest($test, $execScript, $logfile);
 
             if ($video) {
                 print "Ending video recording for test $name... " if $verbose;
@@ -522,7 +589,7 @@ sub _runTest
                 }
             }
         } else {
-            $ret = $self->_runScriptOnHost($hostname, "$newPath/$name",
+            $ret = $self->_runScriptOnHost($hostname, $execScript,
                                            $logfile, $env, $params);
         }
 
@@ -595,6 +662,21 @@ sub _reboot
     my $ret = $waiter->waitForExecution($hostname);
 
     return $ret;
+}
+
+sub _uploadFileToHost
+{
+    my ($self, $hostname, $file) = @_;
+
+    my $client = new ANSTE::Comm::MasterClient();
+
+    my $config = ANSTE::Config->instance();
+    my $port = $config->anstedPort();
+    my $ip = $self->{hostIP}->{$hostname};
+
+    $client->connect("http://$ip:$port");
+
+    $client->put($file);
 }
 
 sub _runScriptOnHost
